<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastro">

    <View
        android:id="@+id/ContainerComponents"
        style="@style/ContainerComponents"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tipouser"/>

    <TextView
        android:id="@+id/bt_voltar_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar_cadastro"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_tipouser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tipo"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_cadastrar"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastro_tutor"
        style="@style/Button"
        android:text="@string/cadastro_tutor"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toTopOf="@id/ContainerComponents"/>

    <View
        android:id="@+id/view_barra"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/HTML_DimGray"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_cadastro_tutor"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastro_ponto"
        style="@style/Button"
        android:text="@string/cadastro_ponto"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_barra"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>