<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/coleiraqrlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ContainerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>
    
    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="Email"
        android:drawableRight="@drawable/ic_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toTopOf="@id/ContainerComponents"/>

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:hint="Senha"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        style="@style/Button"
        android:text="@string/fazer_login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"/>

    <TextView
        android:id="@+id/bt_esqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_senha"
        android:textSize="20sp"
        android:textColor="@color/HTML_DimGray"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/HTML_DimGray"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login"/>

    <TextView
        android:id="@+id/bt_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cadastro"
        android:textSize="16sp"
        android:textColor="@color/HTML_DimGray"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_esqueci"/>

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/Progessbar"
        android:visibility="invisible"
        android:layout_marginTop="100dp"
        android:indeterminateTint="@color/HTML_DimGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_cadastrar"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>