<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormEncontro">

    <View
        android:id="@+id/ContainerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:background="@color/Very_light_gray"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textEncontrou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/voce_encontrou"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toTopOf="@id/ContainerComponents"/>

    <View
        android:id="@+id/ContainerPet"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/container_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEncontrou"/>

    <ImageView
        android:id="@+id/fotoPet"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_pet"
        app:layout_constraintStart_toStartOf="@id/ContainerPet"
        app:layout_constraintEnd_toEndOf="@id/ContainerPet"
        app:layout_constraintTop_toTopOf="@id/ContainerPet"
        app:layout_constraintBottom_toBottomOf="@id/ContainerPet"/>

    <TextView
        android:id="@+id/textNomePet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@id/ContainerPet"
        app:layout_constraintLeft_toRightOf="@id/ContainerPet"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textRaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Raça "
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/textNomePet"
        app:layout_constraintLeft_toRightOf="@id/ContainerPet"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textPorte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Porte"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textNomePet"
        app:layout_constraintLeft_toRightOf="@id/textRaca"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textPelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tipo de pelo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/textRaca"
        app:layout_constraintLeft_toRightOf="@id/ContainerPet"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textVirgula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=","
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/textPorte"
        app:layout_constraintLeft_toRightOf="@id/textPelo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Idade"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/textPorte"
        app:layout_constraintLeft_toRightOf="@id/textVirgula"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/ContainerNotificacao"
        style="@style/ContainerComponents"
        android:layout_height="620dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ContainerComponents"/>

    <TextView
        android:id="@+id/title_insira"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/insira_dados"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/ContainerNotificacao"
        app:layout_constraintEnd_toEndOf="@id/ContainerNotificacao"
        app:layout_constraintTop_toTopOf="@id/ContainerNotificacao" />

    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:hint="Nome"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/ContainerNotificacao"
        app:layout_constraintEnd_toEndOf="@id/ContainerNotificacao"
        app:layout_constraintTop_toBottomOf="@id/title_insira"/>

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/ContainerNotificacao"
        app:layout_constraintEnd_toEndOf="@id/ContainerNotificacao"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"/>

    <EditText
        android:id="@+id/edit_telefone"
        style="@style/Edit_Text"
        android:hint="Telefone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@id/ContainerNotificacao"
        app:layout_constraintEnd_toEndOf="@id/ContainerNotificacao"
        app:layout_constraintTop_toBottomOf="@id/edit_email"/>

    <EditText
        android:id="@+id/edit_endereco"
        style="@style/Edit_Text"
        android:hint="Localização atual"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/ContainerNotificacao"
        app:layout_constraintEnd_toEndOf="@id/ContainerNotificacao"
        app:layout_constraintTop_toBottomOf="@id/edit_telefone"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_localizacao"
        android:background="@drawable/button"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abrir_mapa"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="@id/ContainerNotificacao"
        app:layout_constraintEnd_toEndOf="@id/ContainerNotificacao"
        app:layout_constraintTop_toBottomOf="@id/edit_endereco"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_contato_dono"
        style="@style/Button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:text="@string/entrar_contato_dono"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@id/ContainerNotificacao"
        app:layout_constraintTop_toBottomOf="@id/bt_localizacao" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_contato_ponto"
        style="@style/Button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:text="@string/entrar_contato_ponto"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/ContainerNotificacao"
        app:layout_constraintTop_toBottomOf="@id/bt_localizacao"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_deslogar"
        android:background="@drawable/button"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/deslogar_usuario"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@id/ContainerNotificacao"
        app:layout_constraintBottom_toBottomOf="@id/ContainerNotificacao"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>