<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastroPonto">

    <TextView
        android:id="@+id/bt_voltar_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar_cadastro"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/preencha_ponto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preencher_tutor"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_voltar_cadastro"/>

    <View
        android:id="@+id/ContainerComponents"
        style="@style/ContainerComponents"
        android:layout_marginTop="500dp"
        android:layout_height="580dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preencha_ponto"/>

    <EditText
        android:id="@+id/edit_razao_social"
        style="@style/Edit_Text"
        android:hint="Razão Social"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toTopOf="@id/ContainerComponents"/>

    <EditText
        android:id="@+id/edit_cnpj"
        style="@style/Edit_Text"
        android:hint="CNPJ"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_razao_social"/>

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_cnpj"/>

    <EditText
        android:id="@+id/edit_telefone"
        style="@style/Edit_Text"
        android:hint="Telefone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"/>

    <EditText
        android:id="@+id/edit_endereco"
        style="@style/Edit_Text"
        android:hint="Endereço"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_telefone"/>

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:hint="Senha"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_endereco"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrarponto"
        style="@style/Button"
        android:text="@string/title_cadastro"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>